--- a/webplugin/css/app/style.css
+++ b/webplugin/css/app/style.css
@@ -6,7 +6,10 @@
   --km-accent-start: #3f63ff; /* used for gradients */
   --km-accent: #5f46f8;
   --km-accent-contrast: #ffffff;
+  --km-font-title-size: 15px;
+  --km-font-title-weight: 500;
   --km-font-title-color: #1c2043;
+  --km-font-meta-size: 12px;
   --km-font-meta-color: #8d94b5;
   --km-font-body-color: #6e6e6e;
   --km-font-body-size: 14px;
@@ -3586,7 +3589,7 @@ div#mck-rated:before {
   padding-right: 0 !important;
 }
 [dir=rtl] #mck-tab-conversation {
-  padding-left: 16px;
+  padding-right: 16px;
   float: right;
 }
 [dir=rtl] .mck-contact-list .mck-cont-msg-date {
@@ -4267,7 +4270,7 @@ div#mck-rated:before {
 
 /* Default hidden elements */
 #mck-tab-conversation {
-  padding-left: 16px;
+  padding-inline-start: 16px;
 }
 
 #mck-sidebox-content.active-tab-conversations .mck-conversation {
