--- a/webplugin/scss/abstracts/_variables.scss
+++ b/webplugin/scss/abstracts/_variables.scss
@@ -56,7 +56,10 @@ $card-img-height: 160px;
     --km-accent-start: #3f63ff; /* used for gradients */
     --km-accent: #{$primary-color};
     --km-accent-contrast: #ffffff;
+    --km-font-title-size: 15px;
+    --km-font-title-weight: 500;
     --km-font-title-color: #1c2043;
+    --km-font-meta-size: 12px;
     --km-font-meta-color: #8d94b5;
     --km-font-body-color: #6e6e6e;
     --km-font-body-size: 14px;
