--- a/webplugin/scss/components/_km-rtl.scss
+++ b/webplugin/scss/components/_km-rtl.scss
@@ -20,7 +20,7 @@
         padding-right: 0 !important;
     }
     #mck-tab-conversation {
-        padding-left: 16px;
+        padding-right: 16px;
         float: right;
     }
     .mck-contact-list .mck-cont-msg-date {
