--- a/webplugin/scss/components/_km-tab-visibility-base.scss
+++ b/webplugin/scss/components/_km-tab-visibility-base.scss
@@ -28,7 +28,7 @@
 }
 
 #mck-tab-conversation {
-    padding-left: 16px;
+    padding-inline-start: 16px;
 }
 
 // Shared selector groups for tab/subsection states (only active-* classes are used at runtime)
